5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1573_2897.log
== TEST (2019-03-13 13:58:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("2019"))

# Impressao do dobro do numero
print(num)
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:58:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("2019"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.122779
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:00:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = input(int"2019"))

# Impressao do dobro do numero
print(num)
-- ERROR:
File "XXXX", line 4
    num = input(int"2019"))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:00:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input"2016"))

# Impressao do dobro do numero
print(num)
-- ERROR:
File "XXXX", line 4
    num = int(input"2016"))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:07:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input"16"))

# Impressao do dobro do numero
print(num)
-- ERROR:
File "XXXX", line 4
    num = int(input"16"))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:07:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input"0"))

# Impressao do dobro do numero
print(num)
-- ERROR:
File "XXXX", line 4
    num = int(input"0"))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:08:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input"2")

# Impressao do dobro do numero
print(num)
-- ERROR:
File "XXXX", line 4
    num = int(input"2")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:09:18) 
-- CODE:
# Use este codigo como ponto de partida
2
# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(num)
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:09:27) 
-- CODE:
# Use este codigo como ponto de partida
2
# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.199018
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:09:39) 
-- CODE:
# Use este codigo como ponto de partida
2019
# Leitura de valores de entrada e conversao para inteiro
num = int(input("2019"))

# Impressao do dobro do numero
print(num)
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:09:42) 
-- CODE:
# Use este codigo como ponto de partida
2019
# Leitura de valores de entrada e conversao para inteiro
num = int(input("2019"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.135496
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:09:52) 
-- CODE:
# Use este codigo como ponto de partida
2016
# Leitura de valores de entrada e conversao para inteiro
num = int(input("2016"))

# Impressao do dobro do numero
print(num)
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:09:54) 
-- CODE:
# Use este codigo como ponto de partida
2016
# Leitura de valores de entrada e conversao para inteiro
num = int(input("2016"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.152694
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:10:25) 
-- CODE:
# Use este codigo como ponto de partida
2
# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(4)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:10:28) 
-- CODE:
# Use este codigo como ponto de partida
2
# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(4)
-- EXECUTION TIME:
0.177432
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:11:06) 
-- CODE:
# Use este codigo como ponto de partida
2
# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(2*2)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:11:09) 
-- CODE:
# Use este codigo como ponto de partida
2
# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(2*2)
-- EXECUTION TIME:
0.225385
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:11:57) 
-- CODE:
# Use este codigo como ponto de partida
2
# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero"))

# Impressao do dobro do numero
print(2*num)
-- EXECUTION TIME:
0.15093
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
